--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,8 @@ Maintainer: XCB Developers <xcb@lists.freedesktop.org>
 Uploaders: Jamey Sharp <sharpone@debian.org>, Josh Triplett <josh@freedesktop.org>
 Build-Depends: cdbs (>= 0.4.40), debhelper (>= 5.0.0)
 Standards-Version: 3.7.2
-XS-X-Vcs-Git: git://anongit.freedesktop.org/git/xcb/pthread-stubs
+XS-Vcs-Git: git://anongit.freedesktop.org/git/xcb/pthread-stubs
+XS-Vcs-Browser: http://gitweb.freedesktop.org/?p=xcb/pthread-stubs.git
 
 Package: libpthread-stubs0
 Section: libs
