Generate stubs.c via Makefile
Signed-off-by: Julien Danjou <julien@danjou.info>
Reviewed-by: Jamey Sharp <jamey@minilop.net>

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,6 +2,9 @@ pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = pthread-stubs.pc
 
 if BUILD_LIB
+stubs.c: list.m4 stubs.c.m4
+	m4 -P stubs.c.m4 > $@
+
 lib_LTLIBRARIES = libpthread-stubs.la
 libpthread_stubs_la_SOURCES = stubs.c
 endif
