--- a/debian/rules
+++ b/debian/rules
@@ -5,6 +5,8 @@ DEB_DH_INSTALL_SOURCEDIR=debian/tmp
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
 
+DEB_CONFIGURE_EXTRA_FLAGS=--prefix=/
+
 debian/copyright: debian/copyright.debian COPYING
 	cat $+ > $@
 
@@ -14,10 +16,10 @@ clean::
 common-install-prehook-arch common-install-prehook-indep:: debian/copyright
 
 install/libpthread-stubs0::
-	if test -f debian/tmp/usr/lib/libpthread-stubs.so.0.0.0; then dh_install -p$(cdbs_curpkg) debian/tmp/usr/lib/libpthread-stubs.so.0.0.0; fi
-	if test -L debian/tmp/usr/lib/libpthread-stubs.so.0; then dh_install -p$(cdbs_curpkg) debian/tmp/usr/lib/libpthread-stubs.so.0; fi
+	if test -f debian/tmp/lib/libpthread-stubs.so.0.0.0; then dh_install -p$(cdbs_curpkg) debian/tmp/lib/libpthread-stubs.so.0.0.0; fi
+	if test -L debian/tmp/lib/libpthread-stubs.so.0; then dh_install -p$(cdbs_curpkg) debian/tmp/lib/libpthread-stubs.so.0; fi
 
 install/libpthread-stubs0-dev::
-	if test -f debian/tmp/usr/lib/libpthread-stubs.a; then dh_install -p$(cdbs_curpkg) debian/tmp/usr/lib/libpthread-stubs.a; fi
-	if test -L debian/tmp/usr/lib/libpthread-stubs.so; then dh_install -p$(cdbs_curpkg) debian/tmp/usr/lib/libpthread-stubs.so; fi
-	dh_install -p$(cdbs_curpkg) debian/tmp/usr/lib/pkgconfig/pthread-stubs.pc usr/share/pkgconfig/
+	if test -f debian/tmp/lib/libpthread-stubs.a; then dh_install -p$(cdbs_curpkg) debian/tmp/lib/libpthread-stubs.a; fi
+	if test -L debian/tmp/lib/libpthread-stubs.so; then dh_install -p$(cdbs_curpkg) debian/tmp/lib/libpthread-stubs.so; fi
+	dh_install -p$(cdbs_curpkg) debian/tmp/lib/pkgconfig/pthread-stubs.pc usr/share/pkgconfig/
