--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,8 @@ Maintainer: XCB Developers <xcb@lists.freedesktop.org>
 Uploaders: Jamey Sharp <sharpone@debian.org>, Josh Triplett <josh@freedesktop.org>, Julien Danjou <acid@debian.org>
 Build-Depends: cdbs (>= 0.4.93), debhelper (>= 8.1.3)
 Standards-Version: 3.8.3
-XS-Vcs-Git: git://anongit.freedesktop.org/git/xcb/pthread-stubs
-XS-Vcs-Browser: http://gitweb.freedesktop.org/?p=xcb/pthread-stubs.git
+Vcs-Git: git://anonscm.debian.org/git/collab-maint/libpthread-stubs
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/libpthread-stubs.git
 
 Package: libpthread-stubs0
 Section: libs
