--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: libpthread-stubs
 Priority: optional
 Section: libdevel
 Maintainer: XCB Developers <xcb@lists.freedesktop.org>
-Uploaders: Josh Triplett <josh@freedesktop.org>, Julien Danjou <acid@debian.org>
+Uploaders: Julien Danjou <acid@debian.org>
 Build-Depends: cdbs (>= 0.4.93), debhelper (>= 8.1.3)
 Standards-Version: 3.8.3
 Vcs-Git: git://anonscm.debian.org/git/collab-maint/libpthread-stubs
