--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Priority: optional
 Section: libdevel
 Maintainer: XCB Developers <xcb@lists.freedesktop.org>
 Uploaders: Julien Danjou <acid@debian.org>
-Build-Depends: cdbs (>= 0.4.93), debhelper (>= 8.1.3)
+Build-Depends: debhelper (>= 8.1.3), dh-autoreconf
 Standards-Version: 3.8.3
 Vcs-Git: git://anonscm.debian.org/git/collab-maint/libpthread-stubs
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/libpthread-stubs.git
