--- a/debian/rules
+++ b/debian/rules
@@ -1,29 +1,34 @@
 #!/usr/bin/make -f
 
-DEB_DH_INSTALL_SOURCEDIR=debian/tmp
+DEB_HOST_ARCH_OS ?= $(shell dpkg-architecture -qDEB_HOST_ARCH_OS)
+DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/autotools.mk
+%:
+	dh $@ --with autoreconf --builddirectory=build
 
-DEB_CONFIGURE_EXTRA_FLAGS=--prefix=/ --libdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH)
-DEB_DH_MAKESHLIBS_ARGS_libpthread-stubs0=--add-udeb=libpthread-stubs0-udeb
+build-arch: debian/copyright
+build: build-arch build-indep
+
+ifeq ($(DEB_HOST_ARCH_OS), hurd)
+override_dh_auto_configure:
+	# libc.so pulls in libpthread-stubs.so, defeating our configure checks
+	# by making them think the stubs are already in libc.  Point ld at an
+	# empty libpthread-stubs instead.
+	echo 'OUTPUT_FORMAT(elf32-i386)' > debian/libpthread-stubs.so
+	LDFLAGS='-L$(CURDIR)/debian' dh_auto_configure --builddirectory=build
+endif
+
+override_dh_makeshlibs:
+	dh_makeshlibs -plibpthread-stubs0 --add-udeb=libpthread-stubs0-udeb
+
+override_dh_auto_install:
+	dh_auto_install --builddirectory=build
+ifeq ($(DEB_HOST_ARCH_OS), hurd)
+	install -d debian/tmp/lib/$(DEB_HOST_MULTIARCH)
+	mv debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/libpthread-stubs.so.0* debian/tmp/lib/$(DEB_HOST_MULTIARCH)
+	ln -sf /lib/$(DEB_HOST_MULTIARCH)/libpthread-stubs.so.0 debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/libpthread-stubs.so
+endif
 
 debian/copyright: debian/copyright.debian COPYING
 	cat $+ > $@
 
-clean::
-	-rm -f debian/copyright
-
-common-install-prehook-arch common-install-prehook-indep:: debian/copyright
-
-install/libpthread-stubs0::
-	if test -f debian/tmp/lib/$(DEB_HOST_MULTIARCH)/libpthread-stubs.so.0.0.0; then dh_install -p$(cdbs_curpkg) debian/tmp/lib/$(DEB_HOST_MULTIARCH)/libpthread-stubs.so.0.0.0; fi
-	if test -L debian/tmp/lib/$(DEB_HOST_MULTIARCH)/libpthread-stubs.so.0; then dh_install -p$(cdbs_curpkg) debian/tmp/lib/$(DEB_HOST_MULTIARCH)/libpthread-stubs.so.0; fi
-
-install/libpthread-stubs0-udeb::
-	if test -f debian/tmp/lib/$(DEB_HOST_MULTIARCH)/libpthread-stubs.so.0.0.0; then dh_install -p$(cdbs_curpkg) debian/tmp/lib/$(DEB_HOST_MULTIARCH)/libpthread-stubs.so.0.0.0 lib; fi
-	if test -L debian/tmp/lib/$(DEB_HOST_MULTIARCH)/libpthread-stubs.so.0; then dh_install -p$(cdbs_curpkg) debian/tmp/lib/$(DEB_HOST_MULTIARCH)/libpthread-stubs.so.0 lib; fi
-
-install/libpthread-stubs0-dev::
-	if test -f debian/tmp/lib/$(DEB_HOST_MULTIARCH)/libpthread-stubs.a; then dh_install -p$(cdbs_curpkg) debian/tmp/lib/$(DEB_HOST_MULTIARCH)/libpthread-stubs.a usr/lib/$(DEB_HOST_MULTIARCH); ln -s /lib/$(DEB_HOST_MULTIARCH)/libpthread-stubs.so.0.0.0 debian/libpthread-stubs0-dev/usr/lib/$(DEB_HOST_MULTIARCH)/libpthread-stubs.so; fi
-	dh_install -p$(cdbs_curpkg) debian/tmp/lib/$(DEB_HOST_MULTIARCH)/pkgconfig/pthread-stubs.pc usr/lib/$(DEB_HOST_MULTIARCH)/pkgconfig/
