--- a/debian/rules
+++ b/debian/rules
@@ -22,6 +22,7 @@ override_dh_makeshlibs:
 
 override_dh_auto_install:
 	dh_auto_install --builddirectory=build
+	find debian/tmp -name '*.la' -delete
 ifeq ($(DEB_HOST_ARCH_OS), hurd)
 	install -d debian/tmp/lib/$(DEB_HOST_MULTIARCH)
 	mv debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/libpthread-stubs.so.0* debian/tmp/lib/$(DEB_HOST_MULTIARCH)
