--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/libpthread-stubs.g
 
 Package: libpthread-stubs0
 Section: libs
-Architecture: any
+Architecture: hurd-i386
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -26,7 +26,7 @@ Description: pthread stubs not provided by native libc
 
 Package: libpthread-stubs0-udeb
 Section: debian-installer
-Architecture: any
+Architecture: hurd-i386
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Package-Type: udeb
 Description: pthread stubs not provided by native libc - udeb
@@ -36,7 +36,7 @@ Package: libpthread-stubs0-dev
 Section: libdevel
 Architecture: any
 Multi-Arch: same
-Depends: ${misc:Depends}, libpthread-stubs0 (= ${binary:Version})
+Depends: ${misc:Depends}, libpthread-stubs0 (= ${binary:Version}) [hurd-i386]
 Description: pthread stubs not provided by native libc, development files
  This library provides weak aliases for pthread functions not provided
  in libc or otherwise available by default.  Libraries like libxcb rely
