--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: libpthread-stubs
 Priority: optional
 Section: libdevel
-Maintainer: XCB Developers <xcb@lists.freedesktop.org>
+Maintainer: Debian X Strike Force <debian-x@lists.debian.org>
 Uploaders: Julien Danjou <acid@debian.org>
 Build-Depends: debhelper (>= 8.1.3), dh-autoreconf
 Standards-Version: 3.8.3
