--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,8 @@ Maintainer: Debian X Strike Force <debian-x@lists.debian.org>
 Uploaders: Julien Danjou <acid@debian.org>
 Build-Depends: debhelper (>= 8.1.3), dh-autoreconf
 Standards-Version: 3.8.3
-Vcs-Git: git://anonscm.debian.org/git/collab-maint/libpthread-stubs
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/libpthread-stubs.git
+Vcs-Git: https://salsa.debian.org/xorg-team/lib/libpthread-stubs.git
+Vcs-Browser: https://salsa.debian.org/xorg-team/lib/libpthread-stubs
 
 Package: libpthread-stubs0-dev
 Section: libdevel
