--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Priority: optional
 Section: libdevel
 Maintainer: Debian X Strike Force <debian-x@lists.debian.org>
 Uploaders: Julien Danjou <acid@debian.org>
-Build-Depends: debhelper (>= 8.1.3), dh-autoreconf
+Build-Depends: debhelper (>= 11)
 Standards-Version: 3.8.3
 Vcs-Git: https://salsa.debian.org/xorg-team/lib/libpthread-stubs.git
 Vcs-Browser: https://salsa.debian.org/xorg-team/lib/libpthread-stubs
